version-23.2/manage/kubernetes/networking/configure-external-access-nodeport.mdx
---
title: Configure External Access through a NodePort Service
tags:
  - Kubernetes
  - Helm configuration
description: Expose your Redpanda cluster to clients outside of your Kubernetes cluster using a NodePort Service.
---

<head>
    <meta name="title" content="Configure External Access through a NodePort Service | Redpanda Docs"/>
    <meta name="description" content="Expose your Redpanda cluster to clients outside of your Kubernetes cluster by using a NodePort Service."/>
    <link rel="canonical" href="https://docs.redpanda.com/docs/manage/kubernetes/networking/configure-external-access-nodeport/" />
</head>

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import ListenerNodePorts from '../shared/_listener-nodeports.mdx'
import ValuesYaml from '../shared/_values-yaml.mdx'

Setting up external access to your Redpanda cluster allows your applications running outside the Kubernetes cluster to communicate with Redpanda and produce and consume events. By default, the fully qualified domain names (FQDNs) that brokers advertise are their internal addresses within the Kubernetes cluster, which are not reachable from outside the cluster. To make the cluster accessible from outside, each broker must advertise a FQDN that can be reached from outside the cluster.

By default, the Helm chart deploys a NodePort Service that routes external traffic to the listener ports on the Redpanda brokers. To set up external access using this NodePort Service, you must configure the brokers to advertise addresses that resolve to the IP address of the worker node.

![A client connects to a Pod through the NodePort Service](/img/nodeport.png)

## Prerequisites

- One worker node for each Redpanda broker that you want to deploy.

- Install [rpk](../../../../get-started/rpk-install) on your local machine so that you can test connections to your Redpanda cluster from outside Kubernetes.

- Make sure that your Kubernetes cluster is accessible through your desired node port range. You may need to edit your inbound firewall rules.

- If you want brokers to advertise a custom domain, you must have control over the DNS settings for that domain.

  :::tip
  For internal testing, you can use any domain without owning that domain, as long as:

  - Your local DNS server is configured to resolve that domain to the correct IP address.
  - Your client systems are configured to use your DNS server for resolution.

  For production, it's best to buy a domain from a domain registrar. This way, your domain is resolvable without any additional client-side configuration.
  :::

## Advertise custom domains

Advertising custom domains rather than IP addresses has several advantages, including:

- **Flexibility**: IP addresses can change, especially in cloud environments where services can be moved around or scaled up and down. If you use domain names, you can update the DNS record when the IP address changes and the clients won't need any configuration changes.

- **High Availability**: If a server fails, you can quickly point the domain name to another IP address, which would not be possible if clients connect directly using IP addresses.

- **Security**: If the IP address of a server changes, you won't need to reissue TLS certificates if it's bound to a domain name.

To configure your Redpanda brokers to advertise a custom domain, each broker must also have a hostname that points to the address of the broker's worker node.

Your brokers can advertise one of the following hostnames:

- The [default Redpanda hostname](#advertise-the-default-redpanda-hostnames)

  The default hostnames are `redpanda-<ordinal-number>`, where `redpanda` is the name of the Helm release and the `<ordinal-number>` placeholder is the Pod ordinal generated by the StatefulSet.

- [Custom hostnames](#advertise-custom-hostnames)

  Custom hostnames override the default. For example, you can configure your brokers to advertise `<hostname-for-broker-0>.<custom-domain>`.

### Advertise the default Redpanda hostnames

By default, the Helm chart gives each broker a hostname that consists of the Helm release and the Pod ordinal. For example, `redpanda-0`, where `redpanda` is the Helm release and `0` is the Pod ordinal. To configure brokers to advertise these hostnames, you must configure the brokers with a custom domain.

1. Specify your domain and optional subdomains in the `external.domain` configuration.

  Replace `<custom-domain>` with your domain.

  <Tabs groupId="kubernetes-tool">
  <TabItem value="operator" label="Helm + Operator">

  ```yaml title="redpanda-cluster.yaml"
  apiVersion: cluster.redpanda.com/v1alpha1
  kind: Redpanda
  metadata:
    name: redpanda
  spec:
    chartRef: {}
    clusterSpec:
      external:
        enabled: true
        domain: <custom-domain>
        type: NodePort
  ```

  ```bash
  kubectl apply -f redpanda-cluster.yaml --namespace <namespace>
  ```

  
  </TabItem>
  <TabItem value="helm" label="Helm">
  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values" default>

  ```yaml title="custom-domain.yaml"
  external:
    enabled: true
    domain: <custom-domain>
    type: NodePort
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
    --values custom-domain.yaml --reuse-values --wait
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
    --set external.enabled=true \
    --set external.type=NodePort \
    --set external.domain=<custom-domain> \
    --wait

  ```
  </TabItem>
  </Tabs>
  </TabItem>
  </Tabs>

1. [Create a DNS record](#create-dns-records) for each of your broker's FQDNs, relative to the zone.

### Advertise custom hostnames

You can give each Redpanda broker a custom hostname to advertise instead of the default hostnames. Custom hostnames can either be suffixed with the Pod ordinal or they can be fully custom.

#### Advertise custom hostnames suffixed with the Pod ordinal

1. Configure the chart name with your chosen hostname.

  Replace `<custom-domain>` with your domain, and replace `<custom-hostname>` with your hostname.

  <Tabs groupId="kubernetes-tool">
  <TabItem value="operator" label="Helm + Operator">

  ```yaml title="redpanda-cluster.yaml"
  apiVersion: cluster.redpanda.com/v1alpha1
  kind: Redpanda
  metadata:
    name: redpanda
  spec:
    chartRef: {}
    clusterSpec:
      fullnameOverride: <custom-hostname>
      external:
        enabled: true
        type: NodePort
        domain: <custom-domain>
  ```

  ```bash
  kubectl apply -f redpanda-cluster.yaml --namespace <namespace>
  ```

  
  </TabItem>
  <TabItem value="helm" label="Helm">
  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values">

  ```yaml title="custom-hostname-ordinal.yaml"
  fullnameOverride: <custom-hostname>
  external:
    enabled: true
    type: NodePort
    domain: <custom-domain>
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
    --values custom-hostname-ordinal.yaml --reuse-values --wait
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
    --set external.enabled=true \
    --set external.type=NodePort \
    --set external.domain=<custom-domain> \
    --set fullnameOverride=<custom-hostname> \
    --wait
  ```

  </TabItem>
  </Tabs>
  </TabItem>
  </Tabs>

  This configuration renames your Pods to `<hostname>-<pod-ordinal>`. Your Redpanda brokers will advertise the `<hostname>-<pod-ordinal>.<custom-domain>` address.

1. [Create a DNS record](#create-dns-records) for each of your broker's FQDNs, relative to the zone.

#### Advertise fully custom hostnames

1. Add each hostname to the `external.addresses` setting.

  Replace `<custom-domain>` with your domain, and replace the placeholders in the `external.addresses` setting with your own hostname in the order that you want them to be applied to the Redpanda brokers. The hostnames must be given to each Redpanda broker in order of the StatefulSet replicas. For example, the Redpanda broker running inside the `redpanda-0` Pod advertises `<hostname-for-broker-0>.<custom-domain>`.

  <Tabs groupId="kubernetes-tool">
  <TabItem value="operator" label="Helm + Operator">

  ```yaml title="redpanda-cluster.yaml"
  apiVersion: cluster.redpanda.com/v1alpha1
  kind: Redpanda
  metadata:
    name: redpanda
  spec:
    chartRef: {}
    clusterSpec:
      external:
        enabled: true
        type: NodePort
        domain: <custom-domain>
        addresses:
        - <hostname-for-broker-0>
        - <hostname-for-broker-1>
        - <hostname-for-broker-2>
  ```

  ```bash
  kubectl apply -f redpanda-cluster.yaml --namespace <namespace>
  ```

  
  </TabItem>
  <TabItem value="helm" label="Helm">
  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values">

  ```yaml title="custom-hostname.yaml"
  external:
    enabled: true
    type: NodePort
    domain: <custom-domain>
    addresses:
    - <hostname-for-broker-0>
    - <hostname-for-broker-1>
    - <hostname-for-broker-2>
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
    --values custom-hostname.yaml --reuse-values --wait
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
    --set external.enabled=true \
    --set external.type=NodePort \
    --set external.domain=<custom-domain> \
    --set "external.addresses={<hostname-for-broker0>,<hostname-for-broker1>,<hostname-for-broker2>}" \
    --wait
  ```

  </TabItem>
  </Tabs>
  </TabItem>
  </Tabs>

1. [Create a DNS record](#create-dns-records) for each of your broker's FQDNs, relative to the zone.

### Create DNS records

When your brokers are configured to advertise a custom domain, the next step is to create DNS records that point the FQDNs at the IP addresses of the worker nodes on which the brokers are running. You can:

- [Create the DNS records manually](#manual).
- [Use ExternalDNS to manage DNS records](#externaldns).

#### Manual

1. Find out on which worker nodes your Redpanda brokers are running.

  ```bash
  kubectl get pod --namespace <namespace>  \
  -o=custom-columns=NODE:.spec.nodeName,NAME:.metadata.name -l \
  app.kubernetes.io/component=redpanda-statefulset
  ```

1. Find the IP address of each worker node.

  ```bash
  kubectl get node -o wide
  ```

1. Update the A/AAAA records for your domain so that each FQDN points to the correct worker node's IP address.

  Hostname| IP address
  |---|---
  `<fqdn-0>`|`<worker-node-ip-0>`
  `<fqdn-1>`|`<worker-node-ip-1>`
  `<fqdn-2>`|`<worker-node-ip-2>`

  :::warning
  IP addresses can change. If the IP addresses of your worker nodes change, you must reconfigure your DNS records with the new IP addresses.
  :::

1. Wait for your DNS changes to be propagated.

1. Use the FQDN to communicate with the Redpanda brokers from outside the Kubernetes cluster:

    ```bash
    rpk cluster info --brokers <hostname-0>.<custom-domain>:31092
    ```

  If your cluster has TLS enabled, provide any necessary flags. See [Configure TLS for Redpanda in Kubernetes](../../security/kubernetes-tls).

#### ExternalDNS

ExternalDNS is a tool for Kubernetes that manages DNS records. Whenever you add, change, or remove Kubernetes Services or Ingresses, ExternalDNS automatically makes the same updates to the DNS records by communicating with DNS providers through their public APIs. This communication keeps your DNS records up to date with your Kubernetes Services.

1. Ensure that you have a DNS zone available where ExternalDNS can create DNS records. See the [supported DNS providers](https://github.com/kubernetes-sigs/external-dns#status-of-providers) in the ExternalDNS documentation.

1. Deploy ExternalDNS in your Kubernetes cluster. For an example manifest, see the [ExternalDNS documentation](https://github.com/kubernetes-sigs/external-dns/blob/master/docs/tutorials/hostport.md#external-dns).

  Set the `--provider` flag to your DNS provider.

  :::tip
  The `txtOwnerId` and `interval` flags are recommended. The `txtOwnerId` flag prevents DNS record conflicts between different instances of ExternalDNS. The `interval` flag controls the sync period with the DNS provider.
  :::

1. Identify the headless ClusterIP Service in your Redpanda deployment:

  ```bash
  kubectl get service --namespace <namespace>
  ```

  The headless ClusterIP Service has its Cluster-IP set to None.

1. Annotate the headless ClusterIP Service:

  ```bash
  kubectl annotate service <service-name> --namespace <namespace> \
  external-dns.alpha.kubernetes.io/hostname=<custom-domain> \
  external-dns.alpha.kubernetes.io/endpoints-type=<HostIP or NodeExternalIP>
  ```

  For guidance, see [Setting up ExternalDNS for Headless Services](https://github.com/kubernetes-sigs/external-dns/blob/master/docs/tutorials/hostport.md#headless-service) in the ExternalDNS documentation.

ExternalDNS will now automatically create DNS records for your Redpanda brokers, update the records if the IP addresses change, and delete them if you delete the Service.

## Advertise IP addresses

You can configure each Redpanda broker to advertise the IP address of the worker node on which it's running.

:::info
IP addresses assigned to worker nodes must be made resolvable by DNS names to ensure secure TLS access. If your cluster has TLS enabled (default), you must [use custom domains](#use-custom-domains) because the Helm chart does not add IP addresses to the SAN list of TLS certificates.

Although adding entries to the `/etc/hosts` file may work for development purposes, it's not recommended for production environments. In production, you must update your organization's DNS service to make the IP addresses resolvable by DNS names. Updating your organization's DNS service ensures that users can access your services securely without encountering any SSL/TLS warnings or errors.
:::

1. Deploy Redpanda with TLS disabled and enable the NodePort Service type:

  <Tabs groupId="kubernetes-tool">
  <TabItem value="operator" label="Helm + Operator">

  ```yaml title="redpanda-cluster.yaml"
  apiVersion: cluster.redpanda.com/v1alpha1
  kind: Redpanda
  metadata:
    name: redpanda
  spec:
    chartRef: {}
    clusterSpec:
      external:
        enabled: true
        type: NodePort
      tls:
        enabled: false
  ```

  ```bash
  kubectl apply -f redpanda-cluster.yaml --namespace <namespace>
  ```

  
  </TabItem>
  <TabItem value="helm" label="Helm">
  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values">

  ```yaml title="loadbalancer-tls-disabled.yaml"
  external:
    enabled: true
    type: NodePort
  tls:
    enabled: false
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
    --values loadbalancer-tls-disabled.yaml --reuse-values --wait
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
    --set external.enabled=true \
    --set external.type=NodePort \
    --set tls.enabled=false \
    --wait
  ```

  </TabItem>
  </Tabs>
  </TabItem>
  </Tabs>

1. Find out on which worker nodes your Redpanda brokers are running.

  ```bash
  kubectl get pod --namespace <namespace>  \
  -o=custom-columns=NODE:.spec.nodeName,NAME:.metadata.name -l \
  app.kubernetes.io/component=redpanda-statefulset
  ```

1. Find the IP address of each worker node.

  ```bash
  kubectl get node -o wide
  ```

1. Add the IP addresses of each worker node to the `external.addresses` field in order. For example, the first IP address in the list is assigned to `redpanda-0`, the second is assigned to `redpanda-1`, and so on.

  <Tabs groupId="kubernetes-tool">
  <TabItem value="operator" label="Helm + Operator">

  ```yaml title="redpanda-cluster.yaml"
  apiVersion: cluster.redpanda.com/v1alpha1
  kind: Redpanda
  metadata:
    name: redpanda
  spec:
    chartRef: {}
    clusterSpec:
      external:
        addresses:
        - <worker-node-ip-1>
        - <worker-node-ip-2>
        - <worker-node-ip-3>
  ```

  ```bash
  kubectl apply -f redpanda-cluster.yaml --namespace <namespace>
  ```

  
  </TabItem>
  <TabItem value="helm" label="Helm">
  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values">

  ```yaml title="external-access-ip-addresses.yaml"
  external:
    addresses:
    - <worker-node-ip-1>
    - <worker-node-ip-2>
    - <worker-node-ip-3>
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
    --values external-access-ip-addresses.yaml --reuse-values --wait
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
    --set external.enabled=true \
    --set external.type=NodePort \
    --set tls.enabled=false \
    --set external.domain=<custom-domain> \
    --set "external.addresses={<worker-node-ip1>,<worker-node-ip2>,<worker-node-ip3>}" \
    --wait
  ```

  </TabItem>
  </Tabs>
  </TabItem>
  </Tabs>

  :::warning
  IP addresses can change. If the IP addresses of your worker nodes change, you must reconfigure the Redpanda brokers and all your external clients with the new IP addresses.
  :::

1. Use the IP addresses to communicate with the Redpanda cluster from outside the Kubernetes cluster:

  ```bash
  rpk cluster info -X brokers=<worker-node-ip>:31092
  ```

## Next steps

- [Configure security](../../security) for your listeners.

- [Configure listeners](../configure-listeners).

## Suggested reading

- [Redpanda Helm Specification](../../../../reference/redpanda-helm-spec#external)
- [Redpanda CRD Reference](../../../../reference/crd)
